<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="no_of_people">No. of people:</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="smoke">Smoke?</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>